--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -3,3 +3,22 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.search-form {
+  position: relative;
+  left: 40vw;
+  top: 15vh;
+}
+
+.results {
+  position: relative;
+  left: 15vw;
+  top: 20vh;
+  border:1px solid black;
+  height: 60vh;
+  width: 20vw;
+}
+
+#search-results {
+  list-style: none;
+}
