--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -14,11 +14,15 @@
   position: relative;
   left: 15vw;
   top: 20vh;
-  border:1px solid black;
-  height: 60vh;
+  height: 70vh;
   width: 20vw;
 }
 
 #search-results {
+  overflow: auto;
+  scroll-behavior: smooth;
   list-style: none;
+  border:1px solid black;
+  height: 60vh;
+  width: 20vw;
 }
