Adds Google Font: Fira Sans

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Fira Sans', sans-serif;
+}
+
 .search-form {
   position: relative;
   left: 40vw;
