--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -6,10 +6,16 @@
 
 body {
   font-family: 'Fira Sans', sans-serif;
+  color: #131b23;
+  background-image: linear-gradient(#e7dfc6, #816c61);
 }
 
 ul {
   list-style: none;
+}
+
+li {
+  padding: 0.5rem;
 }
 
 .search-form {
