--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -7,7 +7,8 @@
 body {
   font-family: 'Fira Sans', sans-serif;
   color: #131b23;
-  background-image: linear-gradient(#e7dfc6, #816c61);
+  // background-image: linear-gradient(#e7dfc6, #816c61);
+  background-image: linear-gradient(#e9f1f7, #2274a5);
   min-height: 100vh;
 }
 
@@ -37,9 +38,12 @@ li {
 .box {
   min-height: 50vh;
   width: 30vw;
-  background: rgba(233, 241, 247, 0.5);
-  border: 5px solid #2274a5;
+  background: rgba(19, 27, 35, 0.8);
+  color: #e9f1f7;
   padding: 2rem;
+  h2 {
+    color: #e7dfc6;
+  }
 }
 
 #search-results {
