Applies basic styling to Remove buttons

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -54,3 +54,11 @@ li {
   overflow: auto;
   scroll-behavior: smooth;
 }
+
+.remove-btn {
+  padding: 3px;
+  float: right;
+  font-size: xx-small;
+  background-color: #e7dfe6;
+  border: none;
+}
