Adds styling to #playlists-list to assign overflow attribute and a scroll bar.

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -55,6 +55,11 @@ li {
   scroll-behavior: smooth;
 }
 
+#playlists-list {
+  overflow: auto;
+  scroll-behavior: smooth;
+}
+
 .remove-btn {
   padding: 3px;
   float: right;
