Adds Add to Playlist button and basic styling

--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -55,7 +55,8 @@ li {
   scroll-behavior: smooth;
 }
 
-.remove-btn {
+.btn {
+  margin: 3px;
   padding: 3px;
   float: right;
   font-size: xx-small;
